--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,7 @@ header{
 }
 
 header div{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -107,11 +108,11 @@ main{
     bottom: 0;
 }
 
-.container .interac .item span{
+.container .item .interac span{
     color: white;
 }
 
-.container .interac .item img{
+.container .item .interac img{
     width: 24px;
 }
 
@@ -177,11 +178,11 @@ footer ul li{
 
 .loginPopUp{
     position: absolute;
-    display: block;
+    display: none;
     justify-content: center;
     align-items: center;
     top: 25%;
-    z-index: 100%;
+    z-index: 100;
     width: 35%;
     height: 40%;
     background-color: rgb(209, 209, 209);
@@ -233,11 +234,11 @@ footer ul li{
 }
 
 .loginPopUp form .btnsPop{
-    width: 25%;
-    padding: 10px;
+    width: 100%;
+    height: 25%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 }
 
 .loginPopUp form .btnsPop button{
@@ -248,3 +249,7 @@ footer ul li{
     border-radius: 6px;
     cursor: pointer;
 }
+
+/* Pop-Up Comentários */
+
+.boxComment
