--- a/css/index.css
+++ b/css/index.css
@@ -252,4 +252,57 @@ footer ul li{
 
 /* Pop-Up Comentários */
 
-.boxComment
+.boxComment{
+    position: fixed;
+    display: flex;
+    top: 25%;
+    z-index: 100;
+    width: 35%;
+    height: 50%;
+    background-color: rgb(209,209,209);
+    border-radius: 15px;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.headerComment{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    padding: 0 5%;
+}
+
+.imgBox{
+    width: 100%;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.imgBox img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.basicInfos{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+}
+
+.sendComment{
+    width: 100%;
+    height: 10%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
