--- a/css/index.css
+++ b/css/index.css
@@ -266,13 +266,22 @@ footer ul li{
     align-items: center;
 }
 
+.headerComment h2{
+    font-size: calc(0.8rem + 0.8vw);
+    font-weight: 400;
+}
+
 .headerComment{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 10%;
     padding: 0 5%;
+}
+
+.headerComment img{
+    width: 8%;
+    cursor: pointer;
 }
 
 .imgBox{
@@ -282,6 +291,7 @@ footer ul li{
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    object-fit: cover;
 }
 
 .imgBox img{
@@ -292,11 +302,37 @@ footer ul li{
 
 .basicInfos{
     width: 100%;
-    height: 100%;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 5%;
+}
+
+.basicInfos span{
+    font-size: calc(0.5rem + 0.5vw);
+}
+
+.basicInfos .likeBox{
+    display: flex;
+    align-items: center;
+}
+
+.basicInfos img{
+    width: 30%;
+}
+
+.basicInfos .likeBox span{
+    margin: 0 5%;
+}
+
+.basicInfos .chatBox{
+    display: flex;
+    align-items: center;
+}
+
+.basicInfos .chatBox span{
+    margin: 0 3%;
 }
 
 .sendComment{
@@ -305,4 +341,27 @@ footer ul li{
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.sendComment img{
+    width: 5%; 
+}
+
+.sendComment input{
+    width: 80%;
+    height: 100%;
+    padding-left: 2%;
+    border: none;
+    outline: none;
+}
+
+.sendComment button{
+    width: 10%;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+}
+
+.sendComment button img{
+    width: 50%;
 }
