--- a/css/index.css
+++ b/css/index.css
@@ -254,7 +254,7 @@ footer ul li{
 
 .boxComment{
     position: fixed;
-    display: flex;
+    display: none;
     top: 25%;
     z-index: 100;
     width: 35%;
