--- a/css/index.css
+++ b/css/index.css
@@ -1,52 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Questrial&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Questrial&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
-:root{
-    --SpecialFont : "Concert One";
-    --DefaultFont : "Roboto";
+:root {
+    --SpecialFont: "Concert One", sans-serif;
+    --DefaultFont: "Roboto", sans-serif;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: var(--DefaultFont);
 }
 
-header{
+a {
+    color: black;
+    text-decoration: none;
+}
+
+header {
     width: 100vw;
     height: max-content;
 }
 
-header div{
+header div {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2vh 5vh;
     border-bottom: 2px solid #ddd;
+
 }
 
-header div h1{
+header div h1 {
     font-size: calc(0.8rem + 0.9vw);
     font-family: var(--SpecialFont);
 }
 
-header div button{
+header div button {
     width: 15%;
     padding: 15px;
     border-radius: 15px;
-    font-size: calc(0.4rem + 0.4rem);
+    font-size: calc(0.4rem + 0.4vw);
     background-color: black;
     color: white;
     cursor: pointer;
     transition: 0.3s;
 }
 
-header div button:active{
+header div button:active {
     scale: 1.05;
 }
 
-header nav{
+header nav {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,100 +62,99 @@ header nav{
     border-bottom: 2px solid #ddd;
 }
 
-header nav ul li{
+header nav ul li {
     list-style: none;
     font-size: calc(0.6rem + 0.5vw);
 }
 
-a{
-    color: black;
-    text-decoration: none;
-}
-
-main{
+main {
     display: flex;
     justify-content: center;
     align-self: center;
     width: 100%;
 }
 
-.container{
+.container {
     width: 70%;
     padding: 5vh 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    /* Três colunas de mesmo tamanho */
     grid-template-rows: auto;
-    grid-template-areas: 
-    "img1 img1 img2"
-    "img3 img4 img2"
-    "img5 img6 img6"
-    "img5 img7 img8";
+    /* Altura automática baseada no conteúdo */
+    grid-template-areas:
+        "img1 img1 img2"
+        "img3 img4 img2"
+        "img5 img6 img6"
+        "img5 img7 img8";
     gap: 10px;
+    /* Espaçamento entre as imagens */
 }
 
-.container .item{
+.container .item {
     position: relative;
     overflow: hidden;
 }
 
-.container .item img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.container .item .interac{
+.container .item .interac {
     width: 120px;
     display: flex;
     padding: 10px 0;
     justify-content: space-around;
     align-items: center;
-    background: #1e1e1e;
-    position: absolute;  
+    background-color: #1e1e1e;
+    position: absolute;
     bottom: 0;
 }
 
-.container .item .interac span{
+.container .item .interac span {
     color: white;
 }
 
-.container .item .interac img{
+.container .item .interac img {
     width: 24px;
 }
 
-.img1{
+.container .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.img1 {
     grid-area: img1;
 }
 
-.img2{
+.img2 {
     grid-area: img2;
 }
 
-.img3{
+.img3 {
     grid-area: img3;
 }
 
-.img4{
+.img4 {
     grid-area: img4;
 }
 
-.img5{
+.img5 {
     grid-area: img5;
 }
 
-.img6{
+.img6 {
     grid-area: img6;
 }
 
-.img7{
+.img7 {
     grid-area: img7;
 }
 
-.img8{
+.img8 {
     grid-area: img8;
 }
 
-footer{
+/* Footer */
+footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -158,25 +164,24 @@ footer{
     color: white;
 }
 
-footer h1{
+footer h1 {
     font-size: calc(0.8rem + 0.8vw);
     font-family: var(--SpecialFont);
 }
 
-footer ul{
+footer ul {
     width: 25%;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-footer ul li{
+footer ul li {
     list-style: none;
 }
 
-/* Configuração Pop-Up Login */
-
-.loginPopUp{
+/* Configuracao POPUP LOGIN */
+.loginPopUp {
     position: absolute;
     display: none;
     justify-content: center;
@@ -189,7 +194,7 @@ footer ul li{
     border-radius: 15px;
 }
 
-.loginPopUp form{
+.loginPopUp form {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -198,50 +203,49 @@ footer ul li{
     align-items: center;
 }
 
-.loginPopUp form .headerPop{
+.loginPopUp form .headerPop {
+    width: 100%;
+    height: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 15%;
-    border-radius: 2px solid #ddd;
+    border-bottom: 2px solid #ddd;
 }
 
-.loginPopUp form .headerPop h2{
+.loginPopUp form .headerPop h2 {
     font-weight: 400;
 }
 
-.loginPopUp form .inputsPop{
-    width: 100%;
-    height: 60%;
+.loginPopUp form .inputsPop {
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
+    width: 100%;
+    height: 60%;
+    flex-direction: column;
 }
 
-.loginPopUp form .inputsPop label{
+.loginPopUp form .inputsPop label {
     align-self: flex-start;
     margin-left: 25%;
 }
 
-.loginPopUp form .inputsPop input{
+.loginPopUp form .inputsPop input {
     width: 50%;
     padding: 10px;
     border-radius: 6px;
     margin-bottom: 2vh;
-
 }
 
-.loginPopUp form .btnsPop{
-    width: 100%;
-    height: 25%;
+.loginPopUp form .btnsPop {
     display: flex;
     justify-content: center;
     align-items: start;
+    width: 100%;
+    height: 25%;
 }
 
-.loginPopUp form .btnsPop button{
+.loginPopUp form .btnsPop button {
     width: 25%;
     margin: 0 0.5vw;
     padding: 15px 0;
@@ -250,41 +254,40 @@ footer ul li{
     cursor: pointer;
 }
 
-/* Pop-Up Comentários */
-
-.boxComment{
+/* Popup comentario */
+.boxComment {
     position: fixed;
     display: none;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     top: 25%;
     z-index: 100;
     width: 35%;
     height: 50%;
-    background-color: rgb(209,209,209);
+    background-color: rgb(209, 209, 209);
     border-radius: 15px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
 }
 
-.headerComment h2{
+.headerComment {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+    padding: 0 5%;
+}
+
+.headerComment h2 {
     font-size: calc(0.8rem + 0.8vw);
     font-weight: 400;
 }
 
-.headerComment{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0 5%;
-}
-
-.headerComment img{
+.headerComment img {
     width: 8%;
     cursor: pointer;
 }
 
-.imgBox{
+.boxComment .imgBox {
     width: 100%;
     height: 70%;
     display: flex;
@@ -294,18 +297,18 @@ footer ul li{
     object-fit: cover;
 }
 
-.imgBox img{
-    width: 100%;
-    height: 100%;
+.boxComment .imgBox img{
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
 }
 
-.basicInfos{
-    width: 100%;
-    height: 10%;
+.basicInfos {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+    height: 10%;
     padding: 0 5%;
 }
 
@@ -313,25 +316,26 @@ footer ul li{
     font-size: calc(0.5rem + 0.5vw);
 }
 
-.basicInfos .likeBox{
+.basicInfos .likeBox {
     display: flex;
     align-items: center;
 }
 
-.basicInfos img{
+
+.basicInfos img {
     width: 30%;
 }
 
-.basicInfos .likeBox span{
+.basicInfos .likeBox span {
     margin: 0 5%;
 }
 
-.basicInfos .chatBox{
+.basicInfos .chatBox {
     display: flex;
     align-items: center;
 }
 
-.basicInfos .chatBox span{
+.basicInfos .chatBox span {
     margin: 0 3%;
 }
 
@@ -344,7 +348,7 @@ footer ul li{
 }
 
 .sendComment img{
-    width: 5%; 
+    width: 5%;
 }
 
 .sendComment input{
